@@ -11,6 +11,7 @@ Changelog
  * Fix: Validation error messages in `InlinePanel` no longer count towards `max_num` when disabling the 'add' button (Todd Dembrey, Thibaud Colas)
  * Fix: Rich text to contentstate conversion now ignores stray closing tags (frmdstryr)
  * Fix: Escape backslashes in `postgres_search` queries (Hammy Goonan)
+ * Fix: Parent page link in page chooser search results no longer navigates away (Asanka Lihiniyagoda, Sævar Öfjörð Magnússon)
 
 
 2.4 (19.12.2018)
